# FileManager

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py
src/FileManager/: __init__.py  debug.py  main.py
src/FileManager/core/: core.py
