[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filemanager-py"
version = "0.1.0"
description = "A robust and intuitive file management utility for Python"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Louis Goodnews", email = "louisgoodnews95@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "aiofiles>=23.1.0",
    "pyunpack>=0.3.0",
    "patool>=1.12",
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "mypy>=0.961",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "types-aiofiles>=22.1.0",
]

[project.urls]
Homepage = "https://github.com/louisgoodnews/FileManager"
Documentation = "https://github.com/louisgoodnews/FileManager#readme"
"Bug Tracker" = "https://github.com/louisgoodnews/FileManager/issues"
Changelog = "https://github.com/louisgoodnews/FileManager/releases"

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=filemanager --cov-report=term-missing"
